Make sure the text does not wrap.

--- a/pages/css/account.css
+++ b/pages/css/account.css
@@ -11,4 +11,5 @@
   cursor: pointer;
   background-image: url(/images/account/join.png);
   font-size: 21px;
+  white-space: nowrap;
 }
